<resources>
    <string name="app_name">SpringBud</string>
    <string name="debug_activity_databinding_warning">Debug 提示：此 Activity 未遵循 DataBinding 严格模式，存在 视图调用的 Null 安全风险</string>
    <string name="debug_fragment_databinding_warning">Debug 提示：此 Fragment 未遵循 DataBinding 严格模式，存在 视图调用的 Null 安全风险</string>

    <!--测试button文本-->
    <string name="btn_test">测试</string>
    <string name="btn_main_open_drawer">Open Drawer</string>

    <!--考勤dialog按钮文本-->
    <string name="attendance_to_work">上班</string>
    <string name="attendance_off_work">下班</string>
    <string name="attendance_work">全打卡</string>
    <string name="attendance_holiday">休息</string>
    <string name="attendance_leave">带薪假</string>
    <string name="attendance_something_leave">事假</string>
    <string name="attendance_sick_leave">病假</string>

    <!--侧滑navigationView的item文本-->
    <string name="menu_item_home">Home</string>
    <string name="menu_item_setting">Setting</string>
    <string name="menu_item_other">Other</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_about">About</string>
</resources>