<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--给group取不同id，他们之间就会添加分隔线-->
    <group android:checkableBehavior="single"
        android:id="@+id/menu_group1">
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/home"
            android:title="@string/menu_item_home" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/menu_group2">
        <item
            android:id="@+id/item_setting"
            android:icon="@drawable/setting"
            android:title="@string/menu_item_setting" />
        <item android:title="@string/menu_item_other">
            <menu>
                <item
                    android:id="@+id/item_share"
                    android:icon="@drawable/share"
                    android:title="@string/menu_item_share" />
                <item
                    android:id="@+id/item_about"
                    android:icon="@drawable/about"
                    android:title="@string/menu_item_about" />
            </menu>
        </item>
    </group>
</menu>