<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="click"
            type="com.fallgod.springbud.ui.dialog.AttendanceDialogFragment.ClickProxy" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp">

        <Button
            android:id="@+id/btn_to_work"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_off_work"
            android:text="@string/attendance_to_work"
            android:background="@color/md_green_100"
            android:onClick="@{()->click.toWork()}"/>

        <Button
            android:id="@+id/btn_off_work"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_to_work"
            app:layout_constraintBottom_toTopOf="@+id/btn_work"
            android:text="@string/attendance_off_work"
            android:background="@color/md_green_300"
            android:onClick="@{()->click.offWork()}"/>

        <Button
            android:id="@+id/btn_work"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_off_work"
            app:layout_constraintBottom_toTopOf="@+id/btn_holiday"
            android:text="@string/attendance_work"
            android:background="@color/md_green_900"
            android:onClick="@{()->click.Work()}"/>

        <Button
            android:id="@+id/btn_holiday"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_work"
            app:layout_constraintBottom_toTopOf="@+id/btn_leave"
            android:text="@string/attendance_holiday"
            android:background="@color/md_grey_500"
            android:onClick="@{()->click.holiday()}"/>

        <Button
            android:id="@+id/btn_leave"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_holiday"
            app:layout_constraintBottom_toTopOf="@+id/btn_something_leave"
            android:text="@string/attendance_leave"
            android:background="@color/md_orange_500"
            android:onClick="@{()->click.leave()}"/>

        <Button
            android:id="@+id/btn_something_leave"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_leave"
            app:layout_constraintBottom_toTopOf="@+id/btn_sick_leave"
            android:text="@string/attendance_something_leave"
            android:background="@color/md_red_100"
            android:onClick="@{()->click.somethingLeave()}"/>

        <Button
            android:id="@+id/btn_sick_leave"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_something_leave"
            app:layout_constraintBottom_toTopOf="@+id/btn_from_file"
            android:text="@string/attendance_sick_leave"
            android:background="@color/md_red_300"
            android:onClick="@{()->click.sickLeave()}"/>

        <Button
            android:id="@+id/btn_from_file"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_save_file"
            app:layout_constraintTop_toBottomOf="@+id/btn_sick_leave"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="读取json"
            android:onClick="@{()->click.fromJson()}"/>

        <Button
            android:id="@+id/btn_save_file"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/btn_from_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sick_leave"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="保存json"
            android:onClick="@{()->click.saveJson()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>